platform_admins/starter_repos/bank_of_anthos/services/frontend/templates/service--frontend.yml
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  type: LoadBalancer
  selector:
    app: frontend
  ports:
    - name: http
      port: 80
      targetPort: 8080
